scss styling added

--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>CATCH-A-PLASTIC</title>
-        <link
-            href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Gaegu:300,400,700|Loved+by+the+King|Schoolbell|Sue+Ellen+Francisco|Waiting+for+the+Sunrise&display=swap"
-            rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="app">
-            <div class="title">
-                <h1>CATCH-A-PLASTIC</h1>
-                <h2>score: <span class="score score-points">0</span></h2>
-                <button class="button" onClick="startGame()">PLAY</button>
-            </div>
+
+<head>
+    <meta charset="UTF-8">
+    <title>CATCH-A-PLASTIC</title>
+    <link
+        href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Gaegu:300,400,700|Loved+by+the+King|Schoolbell|Sue+Ellen+Francisco|Waiting+for+the+Sunrise&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+
+<body>
+    <div class="app">
+        <div class="title">
+            <h1>CATCH-A-PLASTIC</h1>
+            <h2>score: <span class="score score-points">0</span></h2>
+            <button class="button" onClick="startGame()">PLAY</button>
         </div>
         <div class="game">
             <div class="hole hole-1">
                 <div class="mole mole-a"></div>
             </div>
-             <div class="hole hole-2">
+            <div class="hole hole-2">
                 <div class="mole mole-b"></div>
             </div>
             <div class="hole hole-3">
@@ -45,6 +46,8 @@
                 <div class="mole mole-a"></div>
             </div>
         </div>
-        <script src="./script.js" type="text/javascript"></script>
-    </body>
+    </div>
+    <script src="script.js" type="text/javascript"></script>
+</body>
+
 </html>
